# MemoMeet

./: .env.example  .gitignore  README.md  config.py  extensions.py  main.py  plan.md  pyproject.toml  render.yaml  requirements.txt  to do.md  todo.md
ai/: action_item_extractor.py  commitment_detector.py  concern_detector.py  decision_detector.py  engagement_analyzer.py  gemini_service.py  goal_detector.py  groq_service.py  memory_chat_engine.py  memory_engine.py  preference_detector.py  preparation_engine.py  prompt_templates.py  recommendation_engine.py  recurring_pattern_detector.py  relationship_engine.py  relationship_scorer.py  risk_analysis_engine.py  summary_engine.py
database/: db.py  migrations.py  seed.py
docs/: api_documentation.md  architecture.md  database_schema.md  deployment_guide.md  future_scope.md  hackathon_pitch.md  project_roadmap.md  user_guide.md
models/: __init__.py  action_item.py  analytics.py  meeting.py  meeting_participant.py  memory.py  notification.py  participant.py  recommendation.py  relationship.py  user.py
routes/: action_items.py  analytics.py  auth.py  chatbot.py  dashboard.py  meetings.py  memories.py  notifications.py  participants.py  recommendations.py  reports.py  search.py  settings.py  timeline.py
services/: action_item_service.py  analytics_service.py  auth_service.py  chat_service.py  dashboard_service.py  meeting_service.py  memory_service.py  notification_service.py  participant_service.py  pdf_service.py  recommendation_service.py  relationship_service.py  report_service.py  search_service.py  (+1 more)
(+104 files in other folders)
